// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingListEntry renders consistent dark list rows 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#34434c",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 0,
      "paddingVertical": 18,
    }
  }
  testID="shopping-list-entry-1"
>
  <Text
    testID="shopping-list-icon-1"
  >
    shopping-bag
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#f1f2f8",
            },
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            {
              "flex": 1,
              "fontSize": 19,
              "marginRight": 8,
            },
          ]
        }
      >
        Weekly groceries
      </Text>
      <Text
        style={
          [
            {
              "color": "#f1f2f8",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "fontSize": 16,
              "marginRight": 10,
            },
          ]
        }
      >
        8
         open
      </Text>
      <Text>
        chevron-right
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 2,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#f1f2f8",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            [
              {
                "fontSize": 15,
              },
              {
                "color": "#b8c8d5",
              },
            ],
          ]
        }
      >
        Private
         ·
         
        12
         
        items
      </Text>
      <Text
        testID="shopping-list-sync-icon-1"
      >
        cloud-off
      </Text>
    </View>
  </View>
</View>
`;

exports[`ShoppingListEntry renders consistent dark list rows 2`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#34434c",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 0,
      "paddingVertical": 18,
    }
  }
  testID="shopping-list-entry-1"
>
  <Text
    testID="shopping-list-icon-1"
  >
    shopping-bag
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#f1f2f8",
            },
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            {
              "flex": 1,
              "fontSize": 19,
              "marginRight": 8,
            },
          ]
        }
      >
        Drugstore
      </Text>
      <Text
        style={
          [
            {
              "color": "#f1f2f8",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "fontSize": 16,
              "marginRight": 10,
            },
          ]
        }
      >
        3
         open
      </Text>
      <Text>
        chevron-right
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 2,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#f1f2f8",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            [
              {
                "fontSize": 15,
              },
              {
                "color": "#b8c8d5",
              },
            ],
          ]
        }
      >
        Private
         ·
         
        5
         
        items
      </Text>
      <Text
        testID="shopping-list-sync-icon-1"
      >
        cloud-off
      </Text>
    </View>
  </View>
</View>
`;

exports[`ShoppingListEntry renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#d9dfe3",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 0,
      "paddingVertical": 18,
    }
  }
  testID="shopping-list-entry-1"
>
  <Text
    testID="shopping-list-icon-1"
  >
    shopping-bag
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            {
              "flex": 1,
              "fontSize": 19,
              "marginRight": 8,
            },
          ]
        }
      >
        Default Shopping List
      </Text>
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "fontSize": 16,
              "marginRight": 10,
            },
          ]
        }
      >
        3
         open
      </Text>
      <Text>
        chevron-right
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 2,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            [
              {
                "fontSize": 15,
              },
              {
                "color": "#515960",
              },
            ],
          ]
        }
      >
        Private
         ·
         
        5
         
        items
      </Text>
      <Text
        testID="shopping-list-sync-icon-1"
      >
        cloud-off
      </Text>
    </View>
  </View>
</View>
`;

exports[`ShoppingListEntry renders correctly without counts 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#d9dfe3",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 0,
      "paddingVertical": 18,
    }
  }
  testID="shopping-list-entry-1"
>
  <Text
    testID="shopping-list-icon-1"
  >
    shopping-bag
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            {
              "flex": 1,
              "fontSize": 19,
              "marginRight": 8,
            },
          ]
        }
      >
        Default Shopping List
      </Text>
      <Text>
        chevron-right
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 2,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            [
              {
                "fontSize": 15,
              },
              {
                "color": "#515960",
              },
            ],
          ]
        }
      >
        Private
         ·
         
        0
         
        items
      </Text>
      <Text
        testID="shopping-list-sync-icon-1"
      >
        cloud-off
      </Text>
    </View>
  </View>
</View>
`;
